# llull

./: .copier-answers.yml  .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: gen_credits.py
docs/reference/: cli.md
notebooks/: examples.ipynb
resources/: Content_Taxonomy_3.0_PublicComment-Sept_2021 - Content Taxonomy _about-ness_.tsv  iab_mapping.txt  simple_taxonomy.txt
src/llull/: __init__.py  __main__.py  cli.py  taxon.py  taxonomy.py  utils.py
src/rllull/: __init__.py  __main__.py  cli.py  taxon.py  taxonomy.py  utils.py
tests/: __init__.py  test_cli.py  test_taxonomy.py  test_utils.py
tests/resources/: iab_mapping.txt  simple_structured_taxonomy.tsv  simple_text_taxo.txt
